homework/81350/parser/colapser/parser.output
Terminals unused in grammar

   EOFILE


State 74 conflicts: 1 shift/reduce
State 345 conflicts: 1 shift/reduce
State 453 conflicts: 1 shift/reduce
State 454 conflicts: 1 shift/reduce


Grammar

    0 $accept: input_stmt $end

    1 input_stmt: NEWLINE
    2           | simple_stmt
    3           | compound_stmt NEWLINE
    4           | compound_stmt

    5 decorator: AT dotted_name NEWLINE
    6          | AT dotted_name LPAREN RPAREN NEWLINE
    7          | AT dotted_name LPAREN arglist RPAREN NEWLINE

    8 decorator_more: decorator
    9               | decorator_more decorator

   10 decorated: decorator_more obj_definition

   11 obj_definition: classdef
   12               | funcdef
   13               | async_funcdef

   14 async_funcdef: ASYNC funcdef

   15 funcdef: DEF NAME parameters COLON suite

   16 parameters: LPAREN RPAREN
   17           | LPAREN typedargslist RPAREN

   18 typedargslist: td_one
   19              | td_two
   20              | td_three

   21 td_one: td_one_arg td_more_arg td_one_optional
   22       | td_one_arg td_one_optional

   23 td_one_arg: tfpdef ASSIGN test
   24           | tfpdef

   25 td_more_arg: COMMA td_one_arg
   26            | td_more_arg COMMA td_one_arg

   27 td_one_optional: COMMA td_two
   28                | COMMA td_three
   29                | COMMA
   30                | %empty

   31 td_two: STAR tfpdef td_more_arg td_two_optional
   32       | STAR td_more_arg td_two_optional

   33 td_two_optional: COMMA td_three
   34                | COMMA

   35 td_three: DOUBLESTAR tfpdef COMMA
   36         | DOUBLESTAR tfpdef

   37 tfpdef: NAME
   38       | NAME COLON test

   39 varargslist: var_one
   40            | var_two
   41            | var_three

   42 var_one: var_one_arg var_more_arg var_one_optional
   43        | var_one_arg var_one_optional

   44 var_one_arg: vfpdef ASSIGN test
   45            | vfpdef

   46 var_more_arg: COMMA var_one_arg
   47             | var_more_arg COMMA var_one_arg

   48 var_one_optional: COMMA var_two
   49                 | COMMA var_three
   50                 | COMMA

   51 var_two: STAR vfpdef var_more_arg var_two_optional
   52        | STAR var_more_arg var_two_optional

   53 var_two_optional: COMMA var_three
   54                 | COMMA

   55 var_three: DOUBLESTAR vfpdef COMMA
   56          | DOUBLESTAR vfpdef

   57 vfpdef: NAME

   58 stmt: simple_stmt
   59     | compound_stmt

   60 simple_stmt: small_stmt simple_more_stmt SEMICOLON NEWLINE
   61            | small_stmt simple_more_stmt NEWLINE
   62            | small_stmt NEWLINE
   63            | small_stmt SEMICOLON NEWLINE

   64 simple_more_stmt: SEMICOLON small_stmt
   65                 | simple_more_stmt SEMICOLON small_stmt

   66 small_stmt: expr_stmt
   67           | del_stmt
   68           | pass_stmt
   69           | flow_stmt
   70           | import_stmt
   71           | global_stmt
   72           | nonlocal_stmt
   73           | assert_stmt

   74 expr_stmt: testlist_star_expr expr_stmt_two
   75          | testlist_star_expr

   76 expr_stmt_two: annassign
   77              | augassign aug_expr
   78              | assign_more

   79 assign_more: ASSIGN assign_expr
   80            | assign_more ASSIGN assign_expr

   81 assign_expr: yield_expr
   82            | testlist_star_expr

   83 aug_expr: yield_expr
   84         | testlist

   85 annassign: COLON test
   86          | COLON test ASSIGN test

   87 testlist_star_expr: testlist_se testlist_star_expr_more COMMA
   88                   | testlist_se testlist_star_expr_more
   89                   | testlist_se COMMA
   90                   | testlist_se

   91 testlist_se: test
   92            | star_expr

   93 testlist_star_expr_more: COMMA testlist_se
   94                        | testlist_star_expr_more COMMA testlist_se

   95 augassign: PLUSASSIGN
   96          | MINUSASSIGN
   97          | STARASSIGN
   98          | ATASSIGN
   99          | SLASHASSIGN
  100          | PERCENTASSIGN
  101          | BOOLANDASSIGN
  102          | BOOLORASSIGN
  103          | HATASSIGN
  104          | SHIFTLEFTASSIGN
  105          | SHIFTRIGHTASSIGN
  106          | DOUBLESTARASSIGN
  107          | DOUBLESLASHASSIGN

  108 del_stmt: DEL exprlist

  109 pass_stmt: PASS

  110 flow_stmt: break_stmt
  111          | continue_stmt
  112          | return_stmt
  113          | raise_stmt
  114          | yield_stmt

  115 break_stmt: BREAK

  116 continue_stmt: CONTINUE

  117 return_stmt: RETURN
  118            | RETURN testlist

  119 yield_stmt: yield_expr

  120 raise_stmt: RAISE
  121           | RAISE test
  122           | RAISE test FROM test

  123 import_stmt: import_name
  124            | import_from

  125 import_name: IMPORT dotted_as_names

  126 import_from: FROM import_from_name IMPORT import_from_import

  127 import_from_name: dotted_name
  128                 | dots_more dotted_name
  129                 | dots_more

  130 dots: DOT
  131     | THREEDOTS

  132 dots_more: dots
  133          | dots_more dots

  134 import_from_import: STAR
  135                   | LPAREN import_as_names RPAREN
  136                   | import_as_names

  137 import_as_name: NAME
  138               | NAME AS NAME

  139 dotted_as_name: dotted_name
  140               | dotted_name AS NAME

  141 import_as_names: import_as_name COMMA
  142                | import_as_name
  143                | import_as_name import_as_name_more COMMA
  144                | import_as_name import_as_name_more

  145 import_as_name_more: COMMA import_as_name
  146                    | import_as_name_more COMMA import_as_name

  147 dotted_as_names: dotted_as_name
  148                | dotted_as_name dotted_as_name_more

  149 dotted_as_name_more: COMMA dotted_as_name
  150                    | dotted_as_name_more COMMA dotted_as_name

  151 dotted_name: NAME
  152            | NAME dotted_name_more

  153 dotted_name_more: DOT NAME
  154                 | dotted_name_more DOT NAME

  155 global_stmt: GLOBAL NAME
  156            | GLOBAL NAME global_stmt_more

  157 global_stmt_more: COMMA NAME
  158                 | global_stmt_more COMMA NAME

  159 nonlocal_stmt: NONLOCAL NAME
  160              | NONLOCAL NAME nonlocal_stmt_more

  161 nonlocal_stmt_more: COMMA NAME
  162                   | nonlocal_stmt_more COMMA NAME

  163 assert_stmt: ASSERT test
  164            | ASSERT COMMA test

  165 compound_stmt: if_stmt
  166              | while_stmt
  167              | for_stmt
  168              | try_stmt
  169              | with_stmt
  170              | funcdef
  171              | classdef
  172              | decorated
  173              | async_stmt

  174 async_stmt: ASYNC funcdef
  175           | ASYNC with_stmt
  176           | ASYNC for_stmt

  177 if_stmt: IF test COLON suite elif_stmt_more else_stmt
  178        | IF test COLON suite elif_stmt_more
  179        | IF test COLON suite else_stmt
  180        | IF test COLON suite

  181 elif_stmt: ELIF test COLON suite

  182 else_stmt: ELSE COLON suite

  183 elif_stmt_more: elif_stmt
  184               | elif_stmt_more elif_stmt

  185 while_stmt: WHILE test COLON suite
  186           | WHILE test COLON suite else_stmt

  187 for_stmt: FOR exprlist IN testlist COLON suite
  188         | FOR exprlist IN testlist COLON suite else_stmt

  189 try_stmt: TRY COLON suite try_stmt_two

  190 try_stmt_two: except_fin_stmt
  191             | finally_stmt

  192 finally_stmt: FINALLY COLON suite

  193 except_fin_stmt: except_stmt_more
  194                | except_stmt_more else_stmt
  195                | except_stmt_more finally_stmt
  196                | except_stmt_more else_stmt finally_stmt

  197 except_stmt_more: except_stmt
  198                 | except_stmt_more except_stmt

  199 except_stmt: except_clause COLON suite

  200 except_clause: EXCEPT
  201              | EXCEPT test
  202              | EXCEPT test AS NAME

  203 with_stmt: WITH with_item with_item_more COLON suite
  204          | WITH with_item COLON suite

  205 with_item: test
  206          | test AS expr

  207 with_item_more: COMMA with_item
  208               | with_item_more COMMA with_item

  209 suite: simple_stmt
  210      | NEWLINE INDENT stmt_more UNINDENT

  211 stmt_more: stmt
  212          | stmt_more stmt

  213 test: or_test
  214     | or_test IF or_test ELSE test
  215     | lambdadef

  216 test_nocond: or_test
  217            | lambdadef_nocond

  218 lambdadef: LAMBDA COLON test
  219          | LAMBDA varargslist COLON test

  220 lambdadef_nocond: LAMBDA COLON test_nocond
  221                 | LAMBDA varargslist COLON test

  222 or_test: and_test or_test_more

  223 or_test_more: OR and_test or_test_more
  224             | %empty

  225 and_test: not_test and_test_more

  226 and_test_more: AND not_test and_test_more
  227              | %empty

  228 not_test: NOT not_test
  229         | comparison

  230 comparison: expr
  231           | expr comp_more

  232 comp_more: comp_op expr
  233          | comp_more comp_op expr

  234 comp_op: LESS
  235        | BIGGER
  236        | EQL
  237        | LESSEQL
  238        | BIGGEREQL
  239        | NOTEQL
  240        | IN
  241        | NOTIN
  242        | IS
  243        | ISNOT

  244 star_expr: STAR expr

  245 expr: xor_expr
  246     | xor_expr expr_more

  247 expr_more: BOOLOR xor_expr
  248          | expr_more BOOLOR xor_expr

  249 xor_expr: and_expr
  250         | and_expr xor_expr_more

  251 xor_expr_more: HAT and_expr
  252              | xor_expr_more HAT and_expr

  253 and_expr: shift_expr
  254         | shift_expr and_expr_more

  255 and_expr_more: BOOLAND shift_expr
  256              | and_expr_more BOOLAND shift_expr

  257 shift_expr: arith_expr
  258           | arith_expr shift_expr_more

  259 shift_expr_more: shift_op arith_expr
  260                | shift_expr_more shift_op arith_expr

  261 shift_op: SHIFTLESS
  262         | SHIFTRIGHT

  263 arith_expr: term
  264           | term arith_expr_more

  265 arith_expr_more: arith_op term
  266                | arith_expr_more arith_op term

  267 arith_op: PLUS
  268         | MINUS

  269 term: factor
  270     | factor term_more

  271 term_more: term_op factor
  272          | term_more term_op factor

  273 term_op: STAR
  274        | AT
  275        | SLASH
  276        | PERCENT
  277        | DOUBLESLASH

  278 factor: unar_op factor
  279       | power

  280 unar_op: PLUS
  281        | MINUS
  282        | TILDA

  283 power: atom_expr
  284      | atom_expr DOUBLESTAR factor

  285 atom_expr: AWAIT atom
  286          | atom
  287          | AWAIT atom trailer_more
  288          | atom trailer_more

  289 atom: LPAREN RPAREN
  290     | LPAREN yield_expr RPAREN
  291     | LPAREN testlist_comp RPAREN
  292     | LSQPAREN RSQPAREN
  293     | LSQPAREN testlist_comp RSQPAREN
  294     | LCURPAREN RCURPAREN
  295     | LCURPAREN dictorsetmaker RCURPAREN
  296     | NAME
  297     | NUMBER
  298     | STRING
  299     | THREEDOTS
  300     | NONE
  301     | TRUE
  302     | FALSE
  303     | DOLAR

  304 testlist_comp: test testlist_comp_second
  305              | star_expr testlist_comp_second

  306 testlist_comp_second: comp_for
  307                     | testlist_more_arg

  308 testlist_more_arg: COMMA test COMMA
  309                  | COMMA test
  310                  | testlist_more_arg COMMA test COMMA
  311                  | testlist_more_arg COMMA test
  312                  | testlist_more_arg COMMA star_expr COMMA
  313                  | testlist_more_arg COMMA star_expr

  314 trailer: LPAREN RPAREN
  315        | LPAREN arglist RPAREN
  316        | LSQPAREN subscriptlist RSQPAREN
  317        | DOT NAME

  318 trailer_more: trailer
  319             | trailer_more trailer

  320 subscriptlist: subscript COMMA
  321              | subscript
  322              | subscript subscipt_more COMMA
  323              | subscript subscipt_more

  324 subscipt_more: COMMA subscript
  325              | subscipt_more COMMA subscript

  326 subscript: test
  327          | COLON
  328          | COLON test
  329          | COLON sliceop
  330          | COLON test sliceop
  331          | test COLON
  332          | test COLON test
  333          | test COLON sliceop
  334          | test COLON test sliceop

  335 sliceop: COLON test
  336        | COLON

  337 exprlist: exprlist_op COMMA
  338         | exprlist_op
  339         | exprlist_op exprlist_more COMMA
  340         | exprlist_op exprlist_more

  341 exprlist_more: COMMA exprlist_op
  342              | exprlist_more COMMA exprlist_op

  343 exprlist_op: expr
  344            | star_expr

  345 testlist: test
  346         | test COMMA
  347         | test testlist_more
  348         | test testlist_more COMMA

  349 testlist_more: COMMA test
  350              | testlist_more COMMA test

  351 dictorsetmaker: test_star_expr dsm_one
  352               | test_star_expr COMMA
  353               | test_star_expr
  354               | test_star_expr_2 dsm_two
  355               | test_star_expr_2 COMMA
  356               | test_star_expr_2

  357 test_star_expr: test COLON test
  358               | DOUBLESTAR expr

  359 dsm_one: comp_for
  360        | comp_for COMMA
  361        | test_star_expr_more COMMA
  362        | test_star_expr_more

  363 test_star_expr_more: COMMA test_star_expr
  364                    | test_star_expr_more COMMA test_star_expr

  365 test_star_expr_2: test
  366                 | star_expr

  367 dsm_two: comp_for
  368        | comp_for COMMA
  369        | test_star_expr_2_more COMMA
  370        | test_star_expr_2_more

  371 test_star_expr_2_more: COMMA test_star_expr_2
  372                      | test_star_expr_2_more COMMA test_star_expr_2

  373 classdef: CLASS NAME COLON suite
  374         | CLASS NAME LPAREN RPAREN COLON suite
  375         | CLASS NAME LPAREN arglist RPAREN COLON suite

  376 arglist: argument COMMA
  377        | argument
  378        | argument arglist_more COMMA
  379        | argument arglist_more

  380 arglist_more: COMMA argument
  381             | arglist_more COMMA argument

  382 argument: test comp_for
  383         | test
  384         | test ASSIGN test
  385         | DOUBLESTAR test
  386         | STAR test

  387 comp_iter: comp_for
  388          | comp_if

  389 sync_comp_for: FOR exprlist IN or_test
  390              | FOR exprlist IN or_test comp_iter

  391 comp_for: sync_comp_for
  392         | ASYNC comp_for

  393 comp_if: IF test_nocond
  394        | IF test_nocond comp_iter

  395 yield_expr: YIELD
  396           | YIELD yield_arg

  397 yield_arg: FROM test
  398          | testlist


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 297
PLUS (259) 267 280
MINUS (260) 268 281
STAR (261) 31 32 51 52 134 244 273 386
SLASH (262) 275
DOUBLESLASH (263) 277
PERCENT (264) 276
DOUBLESTAR (265) 35 36 55 56 284 358 385
BIGGER (266) 235
LESS (267) 234
BIGGEREQL (268) 238
LESSEQL (269) 237
EQL (270) 236
NOTEQL (271) 239
BOOLAND (272) 255 256
BOOLOR (273) 247 248
TILDA (274) 282
HAT (275) 251 252
SHIFTRIGHT (276) 262
SHIFTLESS (277) 261
ASSIGN (278) 23 44 79 80 86 384
PLUSASSIGN (279) 95
MINUSASSIGN (280) 96
STARASSIGN (281) 97
SLASHASSIGN (282) 99
PERCENTASSIGN (283) 100
DOUBLESTARASSIGN (284) 106
DOUBLESLASHASSIGN (285) 107
HATASSIGN (286) 103
BOOLANDASSIGN (287) 101
BOOLORASSIGN (288) 102
SHIFTRIGHTASSIGN (289) 105
SHIFTLEFTASSIGN (290) 104
ATASSIGN (291) 98
LPAREN (292) 6 7 16 17 135 289 290 291 314 315 374 375
RPAREN (293) 6 7 16 17 135 289 290 291 314 315 374 375
LSQPAREN (294) 292 293 316
RSQPAREN (295) 292 293 316
LCURPAREN (296) 294 295
RCURPAREN (297) 294 295
SEMICOLON (298) 60 63 64 65
COLON (299) 15 38 85 86 177 178 179 180 181 182 185 186 187 188 189
    192 199 203 204 218 219 220 221 327 328 329 330 331 332 333 334
    335 336 357 373 374 375
COMMA (300) 25 26 27 28 29 33 34 35 46 47 48 49 50 53 54 55 87 89 93
    94 141 143 145 146 149 150 157 158 161 162 164 207 208 308 309
    310 311 312 313 320 322 324 325 337 339 341 342 346 348 349 350
    352 355 360 361 363 364 368 369 371 372 376 378 380 381
DOT (301) 130 153 154 317
AT (302) 5 6 7 274
THREEDOTS (303) 131 299
NAME (304) 15 37 38 57 137 138 140 151 152 153 154 155 156 157 158
    159 160 161 162 202 296 317 373 374 375
DEF (305) 15
ASYNC (306) 14 174 175 176 392
AND (307) 226
OR (308) 223
NOT (309) 228
IN (310) 187 188 240 389 390
NOTIN (311) 241
IS (312) 242
ISNOT (313) 243
AWAIT (314) 285 287
NONE (315) 300
TRUE (316) 301
FALSE (317) 302
FOR (318) 187 188 389 390
IF (319) 177 178 179 180 214 393 394
ELIF (320) 181
ELSE (321) 182 214
EXCEPT (322) 200 201 202
CLASS (323) 373 374 375
FROM (324) 122 126 397
FINALLY (325) 192
LAMBDA (326) 218 219 220 221
YIELD (327) 395 396
AS (328) 138 140 202 206
ASSERT (329) 163 164
BREAK (330) 115
CONTINUE (331) 116
DEL (332) 108
GLOBAL (333) 155 156
IMPORT (334) 125 126
NONLOCAL (335) 159 160
PASS (336) 109
RAISE (337) 120 121 122
RETURN (338) 117 118
TRY (339) 189
WHILE (340) 185 186
WITH (341) 203 204
INDENT (342) 210
UNINDENT (343) 210
NEWLINE (344) 1 3 5 6 7 60 61 62 63 210
EOFILE (345)
STRING (346) 298
DOLAR (347) 303


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
input_stmt (94)
    on left: 1 2 3 4, on right: 0
decorator (95)
    on left: 5 6 7, on right: 8 9
decorator_more (96)
    on left: 8 9, on right: 9 10
decorated (97)
    on left: 10, on right: 172
obj_definition (98)
    on left: 11 12 13, on right: 10
async_funcdef (99)
    on left: 14, on right: 13
funcdef (100)
    on left: 15, on right: 12 14 170 174
parameters (101)
    on left: 16 17, on right: 15
typedargslist (102)
    on left: 18 19 20, on right: 17
td_one (103)
    on left: 21 22, on right: 18
td_one_arg (104)
    on left: 23 24, on right: 21 22 25 26
td_more_arg (105)
    on left: 25 26, on right: 21 26 31 32
td_one_optional (106)
    on left: 27 28 29 30, on right: 21 22
td_two (107)
    on left: 31 32, on right: 19 27
td_two_optional (108)
    on left: 33 34, on right: 31 32
td_three (109)
    on left: 35 36, on right: 20 28 33
tfpdef (110)
    on left: 37 38, on right: 23 24 31 35 36
varargslist (111)
    on left: 39 40 41, on right: 219 221
var_one (112)
    on left: 42 43, on right: 39
var_one_arg (113)
    on left: 44 45, on right: 42 43 46 47
var_more_arg (114)
    on left: 46 47, on right: 42 47 51 52
var_one_optional (115)
    on left: 48 49 50, on right: 42 43
var_two (116)
    on left: 51 52, on right: 40 48
var_two_optional (117)
    on left: 53 54, on right: 51 52
var_three (118)
    on left: 55 56, on right: 41 49 53
vfpdef (119)
    on left: 57, on right: 44 45 51 55 56
stmt (120)
    on left: 58 59, on right: 211 212
simple_stmt (121)
    on left: 60 61 62 63, on right: 2 58 209
simple_more_stmt (122)
    on left: 64 65, on right: 60 61 65
small_stmt (123)
    on left: 66 67 68 69 70 71 72 73, on right: 60 61 62 63 64 65
expr_stmt (124)
    on left: 74 75, on right: 66
expr_stmt_two (125)
    on left: 76 77 78, on right: 74
assign_more (126)
    on left: 79 80, on right: 78 80
assign_expr (127)
    on left: 81 82, on right: 79 80
aug_expr (128)
    on left: 83 84, on right: 77
annassign (129)
    on left: 85 86, on right: 76
testlist_star_expr (130)
    on left: 87 88 89 90, on right: 74 75 82
testlist_se (131)
    on left: 91 92, on right: 87 88 89 90 93 94
testlist_star_expr_more (132)
    on left: 93 94, on right: 87 88 94
augassign (133)
    on left: 95 96 97 98 99 100 101 102 103 104 105 106 107, on right:
    77
del_stmt (134)
    on left: 108, on right: 67
pass_stmt (135)
    on left: 109, on right: 68
flow_stmt (136)
    on left: 110 111 112 113 114, on right: 69
break_stmt (137)
    on left: 115, on right: 110
continue_stmt (138)
    on left: 116, on right: 111
return_stmt (139)
    on left: 117 118, on right: 112
yield_stmt (140)
    on left: 119, on right: 114
raise_stmt (141)
    on left: 120 121 122, on right: 113
import_stmt (142)
    on left: 123 124, on right: 70
import_name (143)
    on left: 125, on right: 123
import_from (144)
    on left: 126, on right: 124
import_from_name (145)
    on left: 127 128 129, on right: 126
dots (146)
    on left: 130 131, on right: 132 133
dots_more (147)
    on left: 132 133, on right: 128 129 133
import_from_import (148)
    on left: 134 135 136, on right: 126
import_as_name (149)
    on left: 137 138, on right: 141 142 143 144 145 146
dotted_as_name (150)
    on left: 139 140, on right: 147 148 149 150
import_as_names (151)
    on left: 141 142 143 144, on right: 135 136
import_as_name_more (152)
    on left: 145 146, on right: 143 144 146
dotted_as_names (153)
    on left: 147 148, on right: 125
dotted_as_name_more (154)
    on left: 149 150, on right: 148 150
dotted_name (155)
    on left: 151 152, on right: 5 6 7 127 128 139 140
dotted_name_more (156)
    on left: 153 154, on right: 152 154
global_stmt (157)
    on left: 155 156, on right: 71
global_stmt_more (158)
    on left: 157 158, on right: 156 158
nonlocal_stmt (159)
    on left: 159 160, on right: 72
nonlocal_stmt_more (160)
    on left: 161 162, on right: 160 162
assert_stmt (161)
    on left: 163 164, on right: 73
compound_stmt (162)
    on left: 165 166 167 168 169 170 171 172 173, on right: 3 4 59
async_stmt (163)
    on left: 174 175 176, on right: 173
if_stmt (164)
    on left: 177 178 179 180, on right: 165
elif_stmt (165)
    on left: 181, on right: 183 184
else_stmt (166)
    on left: 182, on right: 177 179 186 188 194 196
elif_stmt_more (167)
    on left: 183 184, on right: 177 178 184
while_stmt (168)
    on left: 185 186, on right: 166
for_stmt (169)
    on left: 187 188, on right: 167 176
try_stmt (170)
    on left: 189, on right: 168
try_stmt_two (171)
    on left: 190 191, on right: 189
finally_stmt (172)
    on left: 192, on right: 191 195 196
except_fin_stmt (173)
    on left: 193 194 195 196, on right: 190
except_stmt_more (174)
    on left: 197 198, on right: 193 194 195 196 198
except_stmt (175)
    on left: 199, on right: 197 198
except_clause (176)
    on left: 200 201 202, on right: 199
with_stmt (177)
    on left: 203 204, on right: 169 175
with_item (178)
    on left: 205 206, on right: 203 204 207 208
with_item_more (179)
    on left: 207 208, on right: 203 208
suite (180)
    on left: 209 210, on right: 15 177 178 179 180 181 182 185 186
    187 188 189 192 199 203 204 373 374 375
stmt_more (181)
    on left: 211 212, on right: 210 212
test (182)
    on left: 213 214 215, on right: 23 38 44 85 86 91 121 122 163 164
    177 178 179 180 181 185 186 201 202 205 206 214 218 219 221 304
    308 309 310 311 326 328 330 331 332 333 334 335 345 346 347 348
    349 350 357 365 382 383 384 385 386 397
test_nocond (183)
    on left: 216 217, on right: 220 393 394
lambdadef (184)
    on left: 218 219, on right: 215
lambdadef_nocond (185)
    on left: 220 221, on right: 217
or_test (186)
    on left: 222, on right: 213 214 216 389 390
or_test_more (187)
    on left: 223 224, on right: 222 223
and_test (188)
    on left: 225, on right: 222 223
and_test_more (189)
    on left: 226 227, on right: 225 226
not_test (190)
    on left: 228 229, on right: 225 226 228
comparison (191)
    on left: 230 231, on right: 229
comp_more (192)
    on left: 232 233, on right: 231 233
comp_op (193)
    on left: 234 235 236 237 238 239 240 241 242 243, on right: 232
    233
star_expr (194)
    on left: 244, on right: 92 305 312 313 344 366
expr (195)
    on left: 245 246, on right: 206 230 231 232 233 244 343 358
expr_more (196)
    on left: 247 248, on right: 246 248
xor_expr (197)
    on left: 249 250, on right: 245 246 247 248
xor_expr_more (198)
    on left: 251 252, on right: 250 252
and_expr (199)
    on left: 253 254, on right: 249 250 251 252
and_expr_more (200)
    on left: 255 256, on right: 254 256
shift_expr (201)
    on left: 257 258, on right: 253 254 255 256
shift_expr_more (202)
    on left: 259 260, on right: 258 260
shift_op (203)
    on left: 261 262, on right: 259 260
arith_expr (204)
    on left: 263 264, on right: 257 258 259 260
arith_expr_more (205)
    on left: 265 266, on right: 264 266
arith_op (206)
    on left: 267 268, on right: 265 266
term (207)
    on left: 269 270, on right: 263 264 265 266
term_more (208)
    on left: 271 272, on right: 270 272
term_op (209)
    on left: 273 274 275 276 277, on right: 271 272
factor (210)
    on left: 278 279, on right: 269 270 271 272 278 284
unar_op (211)
    on left: 280 281 282, on right: 278
power (212)
    on left: 283 284, on right: 279
atom_expr (213)
    on left: 285 286 287 288, on right: 283 284
atom (214)
    on left: 289 290 291 292 293 294 295 296 297 298 299 300 301 302
    303, on right: 285 286 287 288
testlist_comp (215)
    on left: 304 305, on right: 291 293
testlist_comp_second (216)
    on left: 306 307, on right: 304 305
testlist_more_arg (217)
    on left: 308 309 310 311 312 313, on right: 307 310 311 312 313
trailer (218)
    on left: 314 315 316 317, on right: 318 319
trailer_more (219)
    on left: 318 319, on right: 287 288 319
subscriptlist (220)
    on left: 320 321 322 323, on right: 316
subscipt_more (221)
    on left: 324 325, on right: 322 323 325
subscript (222)
    on left: 326 327 328 329 330 331 332 333 334, on right: 320 321
    322 323 324 325
sliceop (223)
    on left: 335 336, on right: 329 330 333 334
exprlist (224)
    on left: 337 338 339 340, on right: 108 187 188 389 390
exprlist_more (225)
    on left: 341 342, on right: 339 340 342
exprlist_op (226)
    on left: 343 344, on right: 337 338 339 340 341 342
testlist (227)
    on left: 345 346 347 348, on right: 84 118 187 188 398
testlist_more (228)
    on left: 349 350, on right: 347 348 350
dictorsetmaker (229)
    on left: 351 352 353 354 355 356, on right: 295
test_star_expr (230)
    on left: 357 358, on right: 351 352 353 363 364
dsm_one (231)
    on left: 359 360 361 362, on right: 351
test_star_expr_more (232)
    on left: 363 364, on right: 361 362 364
test_star_expr_2 (233)
    on left: 365 366, on right: 354 355 356 371 372
dsm_two (234)
    on left: 367 368 369 370, on right: 354
test_star_expr_2_more (235)
    on left: 371 372, on right: 369 370 372
classdef (236)
    on left: 373 374 375, on right: 11 171
arglist (237)
    on left: 376 377 378 379, on right: 7 315 375
arglist_more (238)
    on left: 380 381, on right: 378 379 381
argument (239)
    on left: 382 383 384 385 386, on right: 376 377 378 379 380 381
comp_iter (240)
    on left: 387 388, on right: 390 394
sync_comp_for (241)
    on left: 389 390, on right: 391
comp_for (242)
    on left: 391 392, on right: 306 359 360 367 368 382 387 392
comp_if (243)
    on left: 393 394, on right: 388
yield_expr (244)
    on left: 395 396, on right: 81 83 119 290
yield_arg (245)
    on left: 397 398, on right: 396


State 0

    0 $accept: . input_stmt $end

    NUMBER     shift, and go to state 1
    PLUS       shift, and go to state 2
    MINUS      shift, and go to state 3
    STAR       shift, and go to state 4
    TILDA      shift, and go to state 5
    LPAREN     shift, and go to state 6
    LSQPAREN   shift, and go to state 7
    LCURPAREN  shift, and go to state 8
    AT         shift, and go to state 9
    THREEDOTS  shift, and go to state 10
    NAME       shift, and go to state 11
    DEF        shift, and go to state 12
    ASYNC      shift, and go to state 13
    NOT        shift, and go to state 14
    AWAIT      shift, and go to state 15
    NONE       shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    FOR        shift, and go to state 19
    IF         shift, and go to state 20
    CLASS      shift, and go to state 21
    FROM       shift, and go to state 22
    LAMBDA     shift, and go to state 23
    YIELD      shift, and go to state 24
    ASSERT     shift, and go to state 25
    BREAK      shift, and go to state 26
    CONTINUE   shift, and go to state 27
    DEL        shift, and go to state 28
    GLOBAL     shift, and go to state 29
    IMPORT     shift, and go to state 30
    NONLOCAL   shift, and go to state 31
    PASS       shift, and go to state 32
    RAISE      shift, and go to state 33
    RETURN     shift, and go to state 34
    TRY        shift, and go to state 35
    WHILE      shift, and go to state 36
    WITH       shift, and go to state 37
    NEWLINE    shift, and go to state 38
    STRING     shift, and go to state 39
    DOLAR      shift, and go to state 40

    input_stmt          go to state 41
    decorator           go to state 42
    decorator_more      go to state 43
    decorated           go to state 44
    funcdef             go to state 45
    simple_stmt         go to state 46
    small_stmt          go to state 47
    expr_stmt           go to state 48
    testlist_star_expr  go to state 49
    testlist_se         go to state 50
    del_stmt            go to state 51
    pass_stmt           go to state 52
    flow_stmt           go to state 53
    break_stmt          go to state 54
    continue_stmt       go to state 55
    return_stmt         go to state 56
    yield_stmt          go to state 57
    raise_stmt          go to state 58
    import_stmt         go to state 59
    import_name         go to state 60
    import_from         go to state 61
    global_stmt         go to state 62
    nonlocal_stmt       go to state 63
    assert_stmt         go to state 64
    compound_stmt       go to state 65
    async_stmt          go to state 66
    if_stmt             go to state 67
    while_stmt          go to state 68
    for_stmt            go to state 69
    try_stmt            go to state 70
    with_stmt           go to state 71
    test                go to state 72
    lambdadef           go to state 73
    or_test             go to state 74
    and_test            go to state 75
    not_test            go to state 76
    comparison          go to state 77
    star_expr           go to state 78
    expr                go to state 79
    xor_expr            go to state 80
    and_expr            go to state 81
    shift_expr          go to state 82
    arith_expr          go to state 83
    term                go to state 84
    factor              go to state 85
    unar_op             go to state 86
    power               go to state 87
    atom_expr           go to state 88
    atom                go to state 89
    classdef            go to state 90
    yield_expr          go to state 91


State 1

  297 atom: NUMBER .

    $default  reduce using rule 297 (atom)


State 2

  280 unar_op: PLUS .

    $default  reduce using rule 280 (unar_op)


State 3

  281 unar_op: MINUS .

    $default  reduce using rule 281 (unar_op)


State 4

  244 star_expr: STAR . expr

    NUMBER     shift, and go to state 1
    PLUS       shift, and go to state 2
    MINUS      shift, and go to state 3
    TILDA      shift, and go to state 5
    LPAREN     shift, and go to state 6
    LSQPAREN   shift, and go to state 7
    LCURPAREN  shift, and go to state 8
    THREEDOTS  shift, and go to state 10
    NAME       shift, and go to state 11
    AWAIT      shift, and go to state 15
    NONE       shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    STRING     shift, and go to state 39
    DOLAR      shift, and go to state 40

    expr        go to state 92
    xor_expr    go to state 80
    and_expr    go to state 81
    shift_expr  go to state 82
    arith_expr  go to state 83
    term        go to state 84
    factor      go to state 85
    unar_op     go to state 86
    power       go to state 87
    atom_expr   go to state 88
    atom        go to state 89


State 5

  282 unar_op: TILDA .

    $default  reduce using rule 282 (unar_op)


State 6

  289 atom: LPAREN . RPAREN
  290     | LPAREN . yield_expr RPAREN
  291     | LPAREN . testlist_comp RPAREN

    NUMBER     shift, and go to state 1
    PLUS       shift, and go to state 2
    MINUS      shift, and go to state 3
    STAR       shift, and go to state 4
    TILDA      shift, and go to state 5
    LPAREN     shift, and go to state 6
    RPAREN     shift, and go to state 93
    LSQPAREN   shift, and go to state 7
    LCURPAREN  shift, and go to state 8
    THREEDOTS  shift, and go to state 10
    NAME       shift, and go to state 11
    NOT        shift, and go to state 14
    AWAIT      shift, and go to state 15
    NONE       shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    LAMBDA     shift, and go to state 23
    YIELD      shift, and go to state 24
    STRING     shift, and go to state 39
    DOLAR      shift, and go to state 40

    test           go to state 94
    lambdadef      go to state 73
    or_test        go to state 74
    and_test       go to state 75
    not_test       go to state 76
    comparison     go to state 77
    star_expr      go to state 95
    expr           go to state 79
    xor_expr       go to state 80
    and_expr       go to state 81
    shift_expr     go to state 82
    arith_expr     go to state 83
    term           go to state 84
    factor         go to state 85
    unar_op        go to state 86
    power          go to state 87
    atom_expr      go to state 88
    atom           go to state 89
    testlist_comp  go to state 96
    yield_expr     go to state 97


State 7

  292 atom: LSQPAREN . RSQPAREN
  293     | LSQPAREN . testlist_comp RSQPAREN
